--- a/index.html
+++ b/index.html
@@ -9,33 +9,46 @@
   </head>
   <body>
     <div class="wrapper">
-        <!-- Brand Logo -->
-        <img src="./img/habitual-branding.png" alt="habitual ogo" class="brand-img">
+      <!-- Brand Logo -->
+      <img
+        src="./img/habitual-branding.png"
+        alt="habitual ogo"
+        class="brand-img"
+      />
+      <!-- Background Toggle -->
+      <div class="background-toggles" title="Change Background">
+        <div class="background-1" onclick="changeBackground('1')"></div>
+        <div class="background-2" onclick="changeBackground('2')"></div>
+        <div class="background-3" onclick="changeBackground('3')"></div>
+      </div>
       <!-- Title & Text -->
       <div class="text-container">
-          <h1 class="title">Find the stuff you'll love.</h1>
-          <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime nisi fuga, distinctio est fugiat voluptatum.</p>
-          <div class="app-store-btn">
-              <a href="https://apple.com" target="_blanka">
-                  <img src="./img/app-store-button.png" alt="app store">
-              </a>
-          </div>
-          <div class="google-play-btn">
-              <a href="https://google.com" target="_blanka">
-                  <img src="./img/google-play-button.png" alt="google play">
-              </a>
-          </div>
+        <h1 class="title">Find the stuff you'll love.</h1>
+        <p class="text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime nisi
+          fuga, distinctio est fugiat voluptatum.
+        </p>
+        <div class="app-store-btn">
+          <a href="https://apple.com" target="_blanka">
+            <img src="./img/app-store-button.png" alt="app store" />
+          </a>
+        </div>
+        <div class="google-play-btn">
+          <a href="https://google.com" target="_blanka">
+            <img src="./img/google-play-button.png" alt="google play" />
+          </a>
+        </div>
       </div>
       <!-- Main Image -->
       <div class="main-image-container">
-          <img src="./img/main-image.png" alt="main image">
+        <img src="./img/main-image.png" alt="main image" />
       </div>
       <!-- Images -->
-      <img src="./img/profile.png" alt="Profile" class="profile-img">
-      <img src="./img/orders.png" alt="Orders" class="orders-img">
-      <img src="./img/home.png" alt="Home" class="home-img">
-      <img src="./img/cart.png" alt="Cart" class="cart-img">
-      <img src="./img/product.png" alt="Product" class="product-img">
+      <img src="./img/profile.png" alt="Profile" class="profile-img" />
+      <img src="./img/orders.png" alt="Orders" class="orders-img" />
+      <img src="./img/home.png" alt="Home" class="home-img" />
+      <img src="./img/cart.png" alt="Cart" class="cart-img" />
+      <img src="./img/product.png" alt="Product" class="product-img" />
     </div>
     <!-- Script -->
     <script src="script.js"></script>
